Fix icon alignment and testimonial role title formatting

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,6 +2,7 @@
   color: white;
   padding: 0.1em;
   font-size: 6rem;
+  display: inline-block; 
 }
 
 .about-subject {
